distribution/mlflow/mysql/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mysql
  namespace: mlflow
spec:
  selector:
    matchLabels:
      app: mysql
  rules:
  - {}

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-mysql
  namespace: mlflow
spec:
  host: mysql.mlflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
